2002-12-16  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/i386/socket.S: Use CENABLE and CDISABLE
	macros instead of doing the calls directly.
	* sysdeps/unix/make-syscalls.sh: Add ptw-*.$o target name to rules.
	* Makerules ($(+sysdir_pfx)sysd-rules): Emit rules for ptw-%
	targets.

2002-12-16  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/i386/fpu/bits/mathinline.h: Backout last change.
	* sysdeps/ieee754/bits/nan.h: Likewise.

	* sysdeps/unix/sysv/linux/ia64/syscalls.list (__syscall_open,
	__syscall_wait4, __syscall_ioctl, __syscall_write): Add.

2002-12-16  Roland McGrath  <roland@redhat.com>

	* sunrpc/xdr_mem.c (xdrmem_inline): Fix argument type.
	* sunrpc/xdr_rec.c (xdrrec_inline): Likewise.
	* sunrpc/xdr_stdio.c (xdrstdio_inline): Likewise.

	* sysdeps/unix/sysv/linux/syscalls.list: Add getpmsg, putpmsg.
	* sysdeps/unix/sysv/linux/mips/syscalls.list: Remove s_getpmsg,
	s_putpmsg.
	* sysdeps/unix/sysv/linux/i386/getpmsg.c: File removed.
	* sysdeps/unix/sysv/linux/i386/putpmsg.c: File removed.
	* sysdeps/unix/sysv/linux/m68k/getpmsg.c: File removed.
	* sysdeps/unix/sysv/linux/m68k/putpmsg.c: File removed.
	* sysdeps/unix/sysv/linux/mips/getpmsg.c: File removed.
	* sysdeps/unix/sysv/linux/mips/putpmsg.c: File removed.
	* sysdeps/unix/sysv/linux/powerpc/getpmsg.c: File removed.
	* sysdeps/unix/sysv/linux/powerpc/putpmsg.c: File removed.

2002-12-13  Paul Eggert  <eggert@twinsun.com>

	* sunrpc/rpc/xdr.h (struct XDR.xdr_ops.x_inline): 2nd arg
	is now u_int, not int.
	(struct XDR.x_handy): Now u_int, not int.
	* sunrpc/xdr_mem.c: Include <limits.h>.
	(xdrmem_getlong, xdrmem_putlong, xdrmem_getbytes, xdrmem_putbytes,
	xdrmem_inline, xdrmem_getint32, xdrmem_putint32):
	x_handy is now unsigned, not signed.
	Do not decrement x_handy if no change is made.
	(xdrmem_setpos): Check for int overflow.
	* sunrpc/xdr_sizeof.c (x_inline): 2nd arg is now unsigned.
	(xdr_sizeof): Remove cast that is now unnecessary, now that
	x_handy is unsigned.
